2009-09-19  Ivan Maidanski <ivmai@mail.ru>
	(ivmai147.diff)

	* add_gc_prefix.c: Move the file to the new "extra" directory.
	* AmigaOS.c: Ditto.
	* gcname.c: Ditto.
	* if_mach.c: Ditto.
	* if_not_there.c: Ditto.
	* MacOS.c: Ditto.
	* msvc_dbg.c: Ditto.
	* setjmp_t.c: Ditto.
	* threadlibs.c: Ditto.
	* EMX_MAKEFILE: Prepend setjmp_t.c with "extra" directory.
	* Makefile: Prepend AmigaOS.c, MacOS.c, add_gc_prefix.c, gcname.c,
	if_mach.c, if_not_there.c, msvc_dbg.c, setjmp_t.c, threadlibs.c
	with "extra" directory.
	* Makefile.am: Ditto.
	* Makefile.direct: Ditto.
	* Makefile.dj: Ditto.
	* Makefile.in: Ditto.
	* NT_MAKEFILE: Prepend msvc_dbg.obj with "extra" directory.
	* NT_STATIC_THREADS_MAKEFILE: Ditto.
	* NT_X64_STATIC_THREADS_MAKEFILE: Ditto.
	* NT_X64_THREADS_MAKEFILE: Ditto.
	* NT_THREADS_MAKEFILE: Prepend msvc_dbg.c with "extra" directory.
	* gc.mak: Ditto.
	* PCR-Makefile: Prepend if_mach.c, if_not_there.c with "extra"
	directory.
	* SMakefile.amiga: Prepend AmigaOS.c, setjmp_t.c with "extra"
	directory.
	* doc/simple_example.html: Update for threadlibs.c.
	* os_dep.c: Prepend included AmigaOS.c with "extra" directory.

2009-09-19  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c: Expand all tabs to spaces; remove trailing spaces at
	EOLn; remove multiple trailing blank lines.
	* mark.c: Ditto.
	* mark_rts.c: Ditto.
	* pthread_stop_world.c: Ditto.
	* win32_threads.c: Ditto.
	* include/gc.h: Ditto.
	* include/private/gc_priv.h: Ditto.
	* pthread_stop_world.c: Add copyright header.
	* include/gc.h: Reformat some comments.

2009-09-19  Ivan Maidanski <ivmai@mail.ru>
	(ivmai130a.diff, ivmai130b.diff - superseding diff44, diff69)

	* include/gc.h (GC_do_blocking, GC_call_with_gc_active): New
	function prototype.
	* include/private/gc_priv.h (STOP_WORLD): Replace a no-op (for the
	single-threaded case) with an assertion check for the state to be
	not a "do-blocking" one.
	* include/private/gc_priv.h (blocking_data): Move the structure